# xtts2_api

./: .gitignore  PLAN.md  README.md  pixi.toml  pyproject.toml  run.bat  run.py  run.sh
scripts/: install.bat  install.sh  run.bat  run.sh  serve.bat
src/xtts_fastapi/: api_models.py  audio.py  engine.py  errors.py  file_store.py  logging_setup.py  main.py  model_loader.py  registry.py  settings.py  voices.py
tests/: test_engine.py  test_files.py  test_health.py  test_models.py  test_speech_contract.py  test_voices.py
